--- a/_config.yml
+++ b/_config.yml
@@ -267,7 +267,7 @@ compress_html:
     envs: development
 
 
-# Defaults
+# Defaults     
 defaults:
   # _posts
   - scope:
@@ -277,6 +277,13 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: false
       share: true
       related: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
