--- a/_config.yml
+++ b/_config.yml
@@ -145,7 +145,7 @@ footer:
 include:
   - .htaccess
   - _pages
-include: ["_pages"]
+include: ["_pages", "_includes"]
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
