--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,10 @@ main:
     url: /posts/
   - title: "Publications"
     url: /publications/
+  - title: "Categories"
+    url: /categories/
+  - title: "Tags"
+    url: /tags/
   - title: "About"
     url: /about/
   # - title: "Sample Posts"
