--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification :
+google_site_verification : googlede3afa38c1d138b5.html
 bing_site_verification   :
 yandex_site_verification :
 naver_site_verification  :
@@ -85,9 +85,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "custom"
+  provider               : google-gtag # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
+    tracking_id          : UA-164618897-1
     anonymize_ip         : # true, false (default)
 
 
