--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ social:
 analytics:
   provider               : "google-gtag" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : UA-164618897-1
+    tracking_id          : "UA-164618897-1"
     anonymize_ip         : # true, false (default)
 
 
