--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ locale                   : "en-US"
 title                    : "El blog de las marmotas."
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "Científicas Ebrias FAKE"
+description              : "Una parodia maravillosa."
 url                      :  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  :  # the subpath of your site, e.g. "/blog"
 repository               :  # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -93,10 +93,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Quantum channel people"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  name             : "Científicas Ebrias- FAKE"
+  avatar           : "/assets/images/cruzcampo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "We're amazing people"
-  location         : "Somewhere"
+  location         : "En los bares"
   email            :
   links:
     - label: "Email"
@@ -117,6 +117,8 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
+    <a class="twitter-timeline" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets by TwitterDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      
 
 # Site Footer
 footer:
