--- a/_config.yml
+++ b/_config.yml
@@ -117,9 +117,9 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
-#Attempt to include Twiter feed on sidebar
+# Attempt to include Twiter feed on sidebar
   sidebar:
-    - title: " "
+    - title: "Title"
       text: "<a class="twitter-timeline" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets by TwitterDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>"
   
       
