--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,3 +16,7 @@ main:
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+  #Test Twitter sidebar
+  twitter:
+    - title: "Hay twitter?"
+    url: /_includes/embed_twitter
